🌱 refactor: 역직렬화 타입 포함